--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@azure/storage-blob": "^12.14.0",
     "@terra-money/terra.js": "^3.1.8",
     "@terra-money/terrain": "^0.7.0",
+    "bluebird": "^3.7.2",
     "dotenv": "^16.0.3",
     "glob": "^10.2.6"
   }
